page content Resource
On branch tiago-v1.x
Changes to be committed:
	modified:   .gitignore
	modified:   app/Console/Kernel.php
	modified:   app/CoreLogic/Enums/LanguageEnum.php
	modified:   app/CoreLogic/Enums/StatusEnum.php
	new file:   app/Filament/Resources/DynamicContentResource.php
	new file:   app/Filament/Resources/DynamicContentResource/Pages/CreateDynamicContent.php
	new file:   app/Filament/Resources/DynamicContentResource/Pages/EditDynamicContent.php
	new file:   app/Filament/Resources/DynamicContentResource/Pages/ListDynamicContents.php
	modified:   app/Filament/Resources/Shield/RoleResource.php
	modified:   app/Filament/Resources/Shield/RoleResource/Pages/CreateRole.php
	modified:   app/Filament/Resources/Shield/RoleResource/Pages/EditRole.php
	modified:   app/Filament/Resources/UserResource.php
	modified:   app/Filament/Resources/UserResource/Pages/ChangePasswordUser.php
	modified:   app/Filament/Resources/UserResource/Pages/CreateUser.php
	modified:   app/Filament/Resources/UserResource/Pages/DashboardUser.php
	modified:   app/Filament/Resources/UserResource/Pages/EditUser.php
	modified:   app/Filament/Resources/UserResource/Pages/ListActivitiesUser.php
	modified:   app/Filament/Resources/UserResource/Pages/ListUserActivitiesUser.php
	modified:   app/Filament/Resources/UserResource/Pages/ManageUser.php
	modified:   app/Filament/Resources/UserResource/Pages/ViewUser.php
	modified:   app/Filament/Resources/UserResource/Widgets/UserClosedWidget.php
	modified:   app/Http/Controllers/Controller.php
	modified:   app/Http/Kernel.php
	new file:   app/Models/DynamicContent.php
	modified:   app/Models/User.php
	modified:   app/Policies/RolePolicy.php
	modified:   app/Providers/RouteServiceProvider.php
	modified:   composer.json
	modified:   composer.lock
	modified:   config/activitylog.php
	modified:   config/app.php
	modified:   config/auth.php
	modified:   config/blade-country-flags.php
	modified:   config/blade-heroicons.php
	modified:   config/blade-icons.

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -126,8 +126,33 @@
   "You have not enabled two factor authentication.": "Você ainda não habilitou a autenticação de dois fatores.",
   "You may delete any of your existing tokens if they are no longer needed.": "Você deve deletar os tokens sem utilização.",
   "Your email address is unverified.": "Seu endereço de e-mail não foi verificado.",
-  "click here to request another": "clique aqui para solicitar outro",
   "of": "de",
   "results": "resultados",
-  "to": "até"
+  "to": "até",
+  "Active": "Ativo",
+  "active": "ativo",
+  "Inactive": "Inativo",
+  "inactive": "inativo",
+  "empty means :status": "em branco siginifica :status",
+  "no restrict by date": "não restrito à datas",
+  "HTML code": "Código HTML",
+  "CSS code": "Código CSS",
+  "JS code": "Código JS",
+    "Show from":"Público de",
+    "Show to":"Público até",
+  "Dynamic content" : "Página dinâmica",
+  "Page content" : "Conteúdo da página",
+  "Content" : "Conteúdo",
+  "content" : "conteúdo",
+  "Page" : "Página",
+  "Title" : "Título",
+  "title" : "título",
+  "page" : "página",
+  "Dynamic contents" : "Páginas dinâmicas",
+  "separate by comma" : "separado por vírgula",
+  "Small description": "Descrição curta",
+  "Cover image": "Imagem capa/destaque",
+  "Identifier of the :item (visible in the URL)": "Identificador do :item (visivel na URL)",
+  "Search tags (searchable)": "Termos/tags de pesquisa",
+  "click here to request another": "clique aqui para solicitar outro"
 }
